--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
-    "ant-design-vue": "^4.2.3"
+    "@element-plus/icons-vue": "^2.3.1",
+    "ant-design-vue": "^4.2.3",
+    "element-plus": "^2.7.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.0",
