--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
-    "@element-plus/icons-vue": "^2.3.1",
+    "@types/axios": "^0.14.0",
     "ant-design-vue": "^4.2.3",
-    "element-plus": "^2.7.8"
+    "dayjs": "^1.11.12"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.0",
